--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,14 @@ h2 {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+a:hover {
+  color: rgba(0, 0, 0, 0.8);
+}
 .plain-border {
   border: 1px solid #fff;
   box-shadow: 5px 8px 6px rgba(131, 131, 131, 0.3);
@@ -182,4 +190,11 @@ h2 {
 button:hover {
   border: 1px solid #17a2b8;
   box-shadow: 5px 5px 8px rgba(128, 128, 128, 0.9);
+}
+
+#footer {
+  font-size: 12px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.4);
+  margin: 10px;
 }
