--- a/src/style.css
+++ b/src/style.css
@@ -35,11 +35,18 @@ h2 {
 a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.4);
+  padding: 1px 3px;
 }
 
 a:hover {
   color: rgba(0, 0, 0, 0.8);
+  background: linear-gradient(
+    rgba(0, 0, 255, 0.5) 30%,
+    rgba(255, 255, 0, 0.5) 80%
+  );
+  border-radius: 5px;
 }
+
 .plain-border {
   border: 1px solid #fff;
   box-shadow: 5px 8px 6px rgba(131, 131, 131, 0.3);
@@ -196,5 +203,5 @@ button:hover {
   font-size: 12px;
   text-align: center;
   color: rgba(0, 0, 0, 0.4);
-  margin: 10px;
+  margin: 7px;
 }
