--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ button,
 }
 
 h1 {
-  font-size: 34px;
+  font-size: 32px;
   font-weight: 400;
   text-align: left;
 }
@@ -30,6 +30,9 @@ h2 {
   font-size: 27px;
   font-weight: 400;
   padding: 0;
+  line-height: 80px;
+  display: inline;
+  vertical-align: bottom;
 }
 
 a {
@@ -48,8 +51,8 @@ a:hover {
 }
 
 .plain-border {
-  border: 1px solid #fff;
-  box-shadow: 5px 8px 6px rgba(131, 131, 131, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 5px 5px 7px rgba(126, 126, 126, 0.5);
   border-radius: 5px;
 }
 
@@ -62,15 +65,9 @@ a:hover {
   );
 }
 
-.search-bar {
-  display: inline;
-  margin: 0;
-  padding: 0;
-}
-
 .search-bar-button {
   color: #000;
-  background-color: rgba(128, 128, 128, 0.1);
+  background-color: rgba(225, 225, 225, 0.1);
   height: 33px;
   width: 33px;
   transition: all 150ms ease-in;
@@ -102,10 +99,12 @@ a:hover {
 }
 
 .forecast-icon {
-  width: 55%;
+  width: 55px;
   display: block;
-
   margin: 0 auto;
+  padding: 0;
+  position: relative;
+  top: -10px;
 }
 
 .future-weather {
@@ -120,7 +119,7 @@ a:hover {
 }
 
 .future-weather > div {
-  font-size: 18px;
+  font-size: 15px;
   line-height: 33px;
   text-align: center;
   font-weight: 300;
@@ -138,7 +137,7 @@ a:hover {
   padding: 0px;
 }
 
-#input-location {
+#search-city-input {
   width: 292px;
   line-height: 30px;
   padding-left: 10px;
@@ -146,13 +145,10 @@ a:hover {
 }
 
 #weather-icon {
-  width: 37%;
+  width: 50%;
   display: block;
   padding: 0px;
   margin: 0 auto;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50px;
-  box-shadow: 3px 3px 5px rgba(131, 131, 131, 0.2);
 }
 
 #weather-forecast-wrapper {
@@ -164,12 +160,13 @@ a:hover {
 
 #current-weather-city,
 #current-weather-temperature {
-  display: inline-block;
+  display: inline;
+  height: 80px;
 }
 
 #current-weather-city {
   width: 70%;
-  padding: 0px 5px;
+  padding: 5px 0 0 20px;
 }
 #current-weather-temperature {
   width: 25%;
@@ -191,7 +188,8 @@ a:hover {
   padding: 10px 0;
 }
 
-#input-location:hover,
+#search-city-input:hover,
+#search-city-input:active,
 #current-weather:hover,
 .future-weather:hover,
 button:hover {
